objects/DelegatedUser__c.object
<CustomObject>
    <fields>
        <fullName>DelegatedUsername__c</fullName>
        <label>Delegated Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegated_ORG_ID__c</fullName>
        <description>Remote ORG ID</description>
        <label>Delegated ORG ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Delegated_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Delegated User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DelegatedUsername__c</columns>
        <columns>Delegated_ORG_ID__c</columns>
        <columns>LocalUser__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DU{000000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delegated Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>